scribble-assertions/src/test/resources/bad/extensions/assertions/Choice.scr
module bad.extensions.assertions.Choice;


type <java> "java.lang.Int" from "rt.jar" as Int;


// Check history sensitivity in choice
// Does not work for some reason -- now fixed?
global protocol Prot(role A, role B)
{
	choice at A
	{
		//[x<10]
		MSG1(x:Int) from A to B;  @(x < 10);
	}
	or
	{
		//[y>x]
		MSG2(y:Int) from A to B;  @(y > x);
	}
}